--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,62 @@
+amqp==5.2.0
 asgiref==3.8.1
 attrs==24.2.0
+beautifulsoup4==4.12.3
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.7.4
+cffi==1.17.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+cron-descriptor==1.4.5
 Django==5.1
+django-celery-beat==2.7.0
+django-cors-headers==4.4.0
+django-jazzmin==3.0.0
+django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+h11==0.14.0
 idna==3.7
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kombu==5.4.0
 Markdown==3.6
+outcome==1.3.0.post0
 pillow==10.4.0
+prompt_toolkit==3.0.47
+pycparser==2.22
 PyJWT==2.9.0
+PySocks==1.7.1
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.0.1
 PyYAML==6.0.2
+redis==5.0.8
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.20.0
+selenium==4.23.1
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
 sqlparse==0.5.1
+stripe==10.7.0
+trio==0.26.2
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.2
+vine==5.1.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+wsproto==1.2.0
