--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ EMAIL_USE_TLS = True
 EMAIL_HOST_USER = "moretechglobal@gmail.com"
 EMAIL_HOST_PASSWORD = "iyxulimgngqcajxa"
 REDIS_URL="redis://localhost:6379/0"  
+#hello 
