--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "builds": [{
-      "src": "djangoprojectname/wsgi.py",
+      "src": "core/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
   }],
   "routes": [
       {
           "src": "/(.*)",
-          "dest": "djangoprojectname/wsgi.py"
+          "dest": "core/wsgi.py"
       }
   ]
 }
