--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ EMAIL_HOST = "smtp.gmail.com"
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
 EMAIL_HOST_USER = "moretechglobal@gmail.com"
-EMAIL_HOST_PASSWORD = "iyxulimgngqcajxa"
+EMAIL_HOST_PASSWORD = "ohjgbwlgghedrevn"
 REDIS_URL="redis://localhost:6379/0"  
 #hello 
