--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+gunicorn==23.0.0
 h3==4.1.2
 idna==3.10
 inflection==0.5.1
@@ -28,6 +29,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kombu==5.4.2
 numpy==2.1.3
+packaging==24.2
 pillow==11.0.0
 prompt_toolkit==3.0.48
 psycopg2-binary==2.9.9
