--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+fuzzywuzzy==0.18.0
 gunicorn==23.0.0
 h3==4.1.2
 idna==3.10
@@ -28,6 +29,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kombu==5.4.2
+Levenshtein==0.26.1
 numpy==2.1.3
 packaging==24.2
 pillow==11.0.0
@@ -39,8 +41,10 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
+python-Levenshtein==0.26.1
 pytz==2024.2
 PyYAML==6.0.2
+RapidFuzz==3.11.0
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.21.0
