--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,11 @@ cloudinary==1.41.0
 cron-descriptor==1.4.5
 Django==5.0.7
 django-celery-beat==2.7.0
+django-ckeditor==6.7.2
 django-ckeditor-5==0.2.15
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.6.0
+django-js-asset==3.0.1
 django-taggit==6.1.0
 django-timezone-field==7.0
 djangorestframework==3.15.2
