--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-ckeditor-5==0.2.15
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.6.0
 django-js-asset==3.0.1
+django-redis==5.4.0
 django-taggit==6.1.0
 django-timezone-field==7.0
 djangorestframework==3.15.2
@@ -48,6 +49,7 @@ python-Levenshtein==0.26.1
 pytz==2024.2
 PyYAML==6.0.2
 RapidFuzz==3.11.0
+redis==5.2.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.21.0
